# advent_of_code

./: .gitignore  advent_of_code.c  meson.build
include/: advent_of_code.h  aocfunc.h  runner.h  util.h  year2021.h
include/years/: year2023.h
src/: common.c  meson.build  runner.c  util.c
src/2021/: 01.c  meson.build
src/2023/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  20.c  21.c  22.c  23.c  24.c  25.c  meson.build
